fix findbugs errors